--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.0
   mask_text_input_formatter: ^2.4.0
+  http: ^0.13.5
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  geocoding: ^2.0.5
 
 dev_dependencies:
   flutter_test:
