--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cep_search">
    <application
-        android:label="cep_search"
+        android:label="Busca CEP"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
